# linear_regression

./: .gitignore  Cargo.toml  Dockerfile  requirements.txt
assets/: linear_model.csv
scripts/: plot.py
src/: linear_regression.rs
