[package]
name = "linear_regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "predict"
path = "src/bin/predict.rs"

[lib]
name = "linear_regression"
path = "src/lib.rs"
